--- a/settings.json
+++ b/settings.json
@@ -11,10 +11,10 @@
 	"language":"ind",
 	"ownerNumber": "62887435047326",
 	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
+	"cr": "@ZeeoneOfcོ",
+	"ownername": "ZeeoneOfcོ",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
 }
