--- a/settings.json
+++ b/settings.json
@@ -9,12 +9,12 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
-	"thumb":"thumbnail_1.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
+	"ownerNumber": "6283870799812",
+	"ownerNumberr": "6283870799812",
+	"cr": "@KyyGans",
+	"ownername": "KyyGans",
+	"botname":"Kyybotz12",
+	"thumb":"IMG-20211204-WA0228-min.jpg",
+	"fakethumb":"IMG-20211204-WA0228-min.jpg", 
+	"fake": " 「  Kyybotz12  」\nCreated By @KyyGans"
 }
