--- a/settings.json
+++ b/settings.json
@@ -9,12 +9,12 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6283870799812",
-	"ownerNumberr": "6283870799812",
-	"cr": "@KyyGans",
-	"ownername": "KyyGans",
-	"botname":"Kyybotz12",
+	"ownerNumber": "6285805081500",
+	"ownerNumberr": "6285805081500",
+	"cr": "@GaluhGans",
+	"ownername": "GaluhGans",
+	"botname":"galuhbot",
 	"thumb":"IMG-20211204-WA0228-min.jpg",
 	"fakethumb":"IMG-20211204-WA0228-min.jpg", 
-	"fake": " 「  Kyybotz12  」\nCreated By @KyyGans"
+	"fake": " 「  galuhbot  」\nCreated By @GaluhGanz"
 }
